--- a/wwwroot/css/myprofile.css
+++ b/wwwroot/css/myprofile.css
@@ -226,25 +226,19 @@ label {
 }
 
 
-
-button.saveProfileButton {
-    background-color: #007bff; 
-    color: white; 
-    padding: 12px 20px; 
-    border: none; 
-    border-radius: 4px; 
-    cursor: pointer; 
+input[type="submit"] {
+    display: block;
+    width: 10%;
+    padding: 10px;
+    font-size: 16px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px; 
 }
 
-button.saveProfileButton:hover {
-    background-color: #0061c8; 
-}
-
-button.saveProfileButton {
-    display: flex;
-    justify-content: flex-end; 
-}
-.savebutton {
-    display: flex;
-    justify-content: flex-end; 
+input[type="submit"]:hover {
+    background-color: #0056b3;
 }
