--- a/Views/Event/Details.cshtml
+++ b/Views/Event/Details.cshtml
@@ -3,6 +3,11 @@
 @using HaBuddies.Constants
 @using static HaBuddies.Services.Utils.EventUtil
 @using Newtonsoft.Json;
+@inject HaBuddies.Services.ImageService ImageService;
+
+@section Stylesheets {
+    <link rel="stylesheet" href="~/css/detail.css" asp-append-version="true" />
+}
 
 @{
     ViewData["Title"] = "Details";
@@ -17,6 +22,7 @@
     bool selfOwned = IsOwnedEvent(userObject, Model);
     bool canJoin = IsJoinable(userObject, Model);
     bool currentlyJoin = IsCurrentlyJoined(userObject, Model);
+    string imageOwnerPath = ImageService.GetUserImageFileExtension(Model.OwnerId);
 }
 
 <div class="evt-detail" id="@Model.Id">
@@ -28,7 +34,7 @@
         <h1 class="evt-title">@Model.Title</h1>
         <div class="owner">
             <div class="owner-picture">
-                <img alt="Owner picture" src="~/img/default.jpg" draggable="false">
+                <img alt="Owner picture" src="~/@imageOwnerPath" draggable="false">
             </div>
             <span class="owner-name">@Model.Owner.Name @Model.Owner.Surname</span>
         </div>
@@ -40,7 +46,7 @@
             @currentEnroll/@Model.EnrollSize <i class="fa-solid fa-user-group"></i>
         </span>
         @if (!selfOwned) {
-            <button type="button" class="evt-join @(canJoin?"active":"") @(currentlyJoin?"leave":"join")" onclick=@(canJoin?"myFunction(this)":"")>
+            <button type="button" class="evt-join @(canJoin?"active":"") @(currentlyJoin?"leave":"join")" onclick=@(canJoin?"ClickJoinOrLeave(this,this.parentElement.parentElement.id)":"")>
                 @if (currentlyJoin) {
                     <text>ออก</text>
                 }
@@ -49,30 +55,48 @@
                 }
             </button>
         }
+        else {
+            <button type="button" class="evt-edit" onclick=@(canJoin?"ClickEdit('this.parentElement.parentElement.id')":"")>
+                แก้ไข
+            </button>
+            <button type="button" class="evt-delete" onclick=@(canJoin?"ClickDelete(this.parentElement.parentElement.id)":"")>
+                ลบทิ้ง
+            </button>
+        }
 
-        <div class="evt-member">
-            <h2>Member</h2>
-            @foreach (UserNoPassword member in Model.Subscribers) {
-                <div class="member">
-                    <div class="member-picture">
-                        <img alt="member picture" src="~/img/default.jpg" draggable="false">
-                    </div>
-                    <span class="member-name">@member.Name @member.Surname</span>
-                </div>
-            }
-        </div>
-
-        <div class="evt-q-user">
-            <h2>Queue</h2>
-            @foreach (UserNoPassword qUser in Model.Queue) {
-                <div class="q-user">
-                    <div class="q-user-picture">
-                        <img alt="q-user picture" src="~/img/default.jpg" draggable="false">
-                    </div>
-                    <span class="q-user-name">@qUser.Name @qUser.Surname</span>
-                </div>
-            }
-        </div>
     </div>
-    
+
+    <div class="evt-member">
+        <h2>Member</h2>
+        @foreach (UserNoPassword member in Model.Subscribers) {
+            string imageMemberPath = ImageService.GetUserImageFileExtension(member.Id);
+            <div type="button" class="member" onclick="ClickProfile('@member.Id')">
+                <div class="member-picture">
+                    <img alt="Member picture" src="~/@imageMemberPath" draggable="false">
+                </div>
+                <span class="member-name">@member.Name @member.Surname</span>
+            </div>
+        }
+    </div>
+
+    <div class="evt-q-user">
+        <h2>Queue</h2>
+        @foreach (UserNoPassword qUser in Model.Queue) {
+            string imageQueueUserPath = ImageService.GetUserImageFileExtension(qUser.Id);
+            <div type="button" class="q-user" onclick="ClickProfile('@qUser.Id')">
+                <div class="q-user-picture">
+                    <img alt="q-user picture" src="~/@imageQueueUserPath" draggable="false">
+                </div>
+                <span class="q-user-name">@qUser.Name @qUser.Surname</span>
+            </div>
+        }
+    </div>
 </div>
+
+@section Scripts {
+    <script>
+        function ClickProfile(id) {
+            alert("Profile of " + id);
+        }
+    </script>
+}
