--- a/Views/Event/Details.cshtml
+++ b/Views/Event/Details.cshtml
@@ -46,22 +46,28 @@
             @currentEnroll/@Model.EnrollSize <i class="fa-solid fa-user-group"></i>
         </span>
         @if (!selfOwned) {
-            <button type="button" class="evt-join @(canJoin?"active":"") @(currentlyJoin?"leave":"join")" onclick=@(canJoin?"ClickJoinOrLeave(this,this.parentElement.parentElement.id)":"")>
-                @if (currentlyJoin) {
-                    <text>ออก</text>
-                }
-                else {
-                    <text>เข้าร่วม</text>
-                }
-            </button>
+            <form method="post">
+                <button class="evt-join @(canJoin?"active":"") @(currentlyJoin?"leave":"join")" asp-controller="Event" asp-action="Subscribe" asp-route-id="@Model.Id">
+                    @if (currentlyJoin) {
+                        <text>ออก</text>
+                    }
+                    else {
+                        <text>เข้าร่วม</text>
+                    }
+                </button>
+            </form>
         }
         else {
-            <button type="button" class="evt-edit" onclick=@(canJoin?"ClickEdit('this.parentElement.parentElement.id')":"")>
-                แก้ไข
-            </button>
-            <button type="button" class="evt-delete" onclick=@(canJoin?"ClickDelete(this.parentElement.parentElement.id)":"")>
-                ลบทิ้ง
-            </button>
+            <form method="post">
+                <button class="evt-edit" asp-controller="Event" asp-action="Edit" asp-route-id="@Model.Id")>
+                    แก้ไข
+                </button>
+            </form>
+            <form method="post">
+                <button class="evt-delete" asp-controller="Event" asp-action="Delete" asp-route-id="@Model.Id")>
+                    ลบทิ้ง
+                </button>
+            </form>
         }
 
     </div>
