--- a/Views/Shared/_EventBannerPartial.cshtml
+++ b/Views/Shared/_EventBannerPartial.cshtml
@@ -45,7 +45,7 @@
             </div>
             <div class="evt-body">
                 <span class="evt-description">@evt.Description</span>
-                <span class="evt-enddate">Close Date<br>@evt.EndDate.ToShortDateString()</span>
+                <span class="evt-enddate">Close Date<br>@evt.EndDate.ToString("dd/MM/yyyy")</span>
             </div>
         </a>
         @if (!selfOwned) {
