--- a/wwwroot/css/create.css
+++ b/wwwroot/css/create.css
@@ -19,7 +19,6 @@ body {
 .PropertyCategory {
     margin-bottom: 20px;
     margin-left: 100px;
-    margin-right: 80px;
 }
 
 .category-boxes {
@@ -104,9 +103,9 @@ body {
 .detailbox {
     margin-bottom: 20px;
     margin-left: 100px;
-    margin-right: 80px;
+    margin-right: 20px;
     display: grid;
-    grid-template-columns: 40% 20% 25%; 
+    grid-template-columns: 45% 25% 30%; 
     gap: 10px; 
 
 }
@@ -152,12 +151,23 @@ body {
     height: auto;
 }
 
+.inputtitle label,
+.inputPeople label,
+.inputdate label {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.inputdate input[type="datetime-local"] {
+    width: 100%;
+}
+
+
 .inputDescription {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     margin-left: 100px;
-    margin-right: 80px;
     display: grid;
-    width: 60%;
+    width: 100%;
     gap: 10px; 
 
 }
@@ -167,7 +177,7 @@ body {
     border-radius: 20px; 
     font-size: 18px;
     padding: 20px;
-    width: 60%;
+    width: auto;
     height: auto;
 }
 
@@ -181,9 +191,8 @@ body {
 .requirement{
     margin-bottom: 20px;
     margin-left: 100px;
-    margin-right: 80px;
     display: grid;
-    grid-template-columns: 20% 20% 20%; 
+    grid-template-columns: repeat(3, 1fr); 
     gap: 10px; 
 }
 
@@ -209,6 +218,17 @@ body {
     padding: 5px 0; 
     width: 100%;
 }
+
+.inputRequirement label {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.inputRequirement select {
+    width: 100%;
+    font-size: 16px;
+}
+
 
 .postForm {
     display: flex;
