--- a/wwwroot/css/myprofile.css
+++ b/wwwroot/css/myprofile.css
@@ -226,6 +226,17 @@ label {
 }
 
 
+.ChangeProfile{
+    margin-top: 20px;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+input.formImage {
+    margin-left: 10px;
+    margin-bottom: 10px; 
+}
+
 input[type="submit"] {
     display: block;
     width: 10%;
