--- a/Views/Shared/_NotificationOwner.cshtml
+++ b/Views/Shared/_NotificationOwner.cshtml
@@ -24,8 +24,9 @@
                     <img src="~/@imageProfilePath" alt="Profile picture" draggable="false">
                 </div>
                 <div class="noti-info">
-                    <h1>@noti.Content</h1>
-                    <p>Event:@noti.Event.Title</p>
+                    <h1>@noti.User.Name has been join @noti.Event.Title</h1>
+                    <hr/>
+                    <p>Event : @noti.Event.Title</p>
                 </div>
             </a>
         </div>
