--- a/Views/Event/Create.cshtml
+++ b/Views/Event/Create.cshtml
@@ -57,7 +57,7 @@
                     <input type="number" class="maxAge" id="MaxAgeRequirement" name="MaxAgeRequirement" value="" >
                 </div>
                 <div class="inputRequirement">
-                    <label for="GenderRequirement">gender  </label>
+                    <label for="GenderRequirement">Gender</label>
                     <select class="gender" id="GenderRequirement" name="GenderRequirement" >
                         <option value="Null"></option>
                         <option value="Male">Male</option>
