--- a/wwwroot/css/notification_owner.css
+++ b/wwwroot/css/notification_owner.css
@@ -9,7 +9,7 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   background-color: #ededed;
   overflow-y: scroll;
-  border-radius: 10px;
+  border-radius: 20px;
   border: grey;
 }
 .notification-block h2 {
@@ -79,7 +79,7 @@
 }
 
 .toggle-btn {
-  padding: 10px 35px;
+  padding: 10px 25px;
   cursor: pointer;
   background: transparent;
   border: 0;
@@ -87,6 +87,7 @@
   position: relative;
   text-align: center;
   font-size: 14px;
+  font-weight: 500;
   color: white;
 }
 
