--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&display=swap">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/layout.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/notification.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/notification_owner.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/notification_user.css" asp-append-version="true" />
     @RenderSection("Stylesheets", required: false)
 </head>
 <body>
@@ -34,7 +35,7 @@
                     <div class="button-box">
 			        <div id="btn"></div>
 			        <button type="button" class="toggle-btn" onclick="leftClick()">Notification</button>
-			        <button type="button" class="toggle-btn" onclick="rightClick()">Post</button>
+			        <button type="button" class="toggle-btn" onclick="rightClick()" style="margin-left: 10px;">My Post</button>
 		            </div>
                     <hr>
                     <div id="notification-owner" style="display:None;"></div>
