--- a/Views/Shared/_NotificationUser.cshtml
+++ b/Views/Shared/_NotificationUser.cshtml
@@ -18,24 +18,31 @@
 {       string userId = noti.Id;
         string imageProfilePath = ImageService.GetUserImageFileExtension(userId);
         var category = noti.Event.Category;
+        var type = noti.Type;
 
-        <div class="noti-owner" id="@noti.Event.Id">
-            <a draggable="false" asp-controller="Event" asp-action="Details" asp-route-id="@noti.Id">
-            <div class="evt-heading">
+        <div class="noti-user" id="@noti.Event.Id">
+            <a draggable="false" asp-controller="Event" asp-action="Details" asp-route-id="@noti.Event.Id">
+            <div class="noti-heading">
                 <div class="category" style="background-color: @Category.GetColorHex(category)">
                     @Html.Raw(Category.GetIconHtml(category))
-                    <span class="evt-category">@category</span>
+                    <span class="noti-category">@category</span>
                 </div>
-                <h2 class="evt-title">@noti.Event.Title</h2>
-                <div class="owner">
-                    <div class="owner-picture">
-                        <img alt="Owner picture" src="~/@imageProfilePath" draggable="false">
-                    </div>
-                    <span class="owner-name">@noti.User.Name</span>
-                </div>
+                <h2 class="noti-title">@noti.Event.Title</h2>
             </div>
-            <div class="evt-body">
-                <span class="evt-description">@noti.Event.Description</span>
+            <hr>
+            <div class="noti-body">
+                @if (type == TypeStatus.Deleted)
+                    {
+                        <p>This event your entered has been deleted from the owner :(</p>
+                    }
+                    else if (type == TypeStatus.ClosedJoin)
+                    {
+                        <p>You have been accept from owner event clicked for detail.</p>
+                    }
+                    else if (type == TypeStatus.ClosedQueue)
+                    {
+                        <p>Sorry For this event is full. Please come join us next time :(</p>
+                    }
             </div>
         </a>
         </div>
