--- a/wwwroot/css/notification_user.css
+++ b/wwwroot/css/notification_user.css
@@ -1,94 +1,69 @@
-/* .notification-block {
-  background: green;
-  width: 400px;
-  height: 0px;
-  opacity: 0;
-  position: absolute;
-  top: 63px;
-  right: 35px;
-  transition: 1s opacity, 250ms height;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  background-color: #ededed;
-  overflow-y: scroll;
-}
-.notification-block h2 {
+.noti-user {
+  border-bottom: 1px solid #f1f2f4;
+  padding: 4px 7px;
   display: flex;
-  font-size: 20px;
-  border-bottom: 1px solid #eee;
-  color: #999;
-  margin-left: 20px;
-}
-.notification-block hr {
-  border-top: 3px solid black;
-  margin: 5px;
+  align-items: center;
 }
 
-.notification-items {
-  cursor: pointer;
-  margin-left: 5px;
-  margin-bottom: 5px;
+.noti-user > a {
+  text-decoration: none;
+  cursor: default;
+  user-select: text;
+  background-color: #d9d9d9;
+  width: 100%;
 }
-.notification-items a {
+
+.noti-heading {
   display: grid;
-  grid-template-rows: auto auto;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: auto 1fr auto;
+  grid-template-rows: 40px;
+  align-items: center;
+  height: 50px;
 }
-.notification-items:hover {
-  background-color: #2e9bff;
-  border-radius: 30px;
+
+.noti-heading * {
+  text-decoration: none;
+  font-size: 16px;
 }
-.noti-profile {
-  grid-area: 1/1/3/2;
+
+.noti-heading *:not(i) {
+  font-weight: 500;
 }
-.noti-profile img {
-  display: block;
-  width: 50px;
-  border-radius: 50%;
-  margin: 10px;
+
+.noti-heading i {
+  margin-right: 0.2rem;
 }
-.noti-info {
+
+.noti-heading > .category {
+  height: 100%; /* Adjust height to occupy full height */
+  color: white;
+  padding: 0 20px;
+  display: flex; /* Use flexbox to center align content vertically */
+  align-items: center;
+  border-radius: 20px; /* Center align content vertically */
+}
+
+.noti-heading .category {
+  grid-area: 1 / 1 / 2 / 2;
+  justify-self: start;
+}
+
+.noti-heading .noti-title {
+  grid-area: 1 / 2 / 2 / 3;
+  font-size: 18px;
+  color: black;
   margin-left: 5px;
-  grid-area: 1/2/2/3;
 }
-.noti-info h1 {
-  grid-area: 1/2/2/3;
-  color: black;
-  font-size: 14px;
-  padding: 0px;
+.noti-user hr {
+  color: #9c9b9b;
 }
-.noti-info p {
-  grid-area: 2/2/3/3;
-  color: black;
-  font-size: 14px;
-  margin: 5px 0 10px 0;
-  line-height: 1.2;
+.noti-body {
+  margin: 0 var(--xmargin);
+  display: grid;
+  grid-template-columns: 1fr auto;
+  grid-template-rows: 1fr;
+  max-width: 100%;
+  font-size: 13px;
+  line-height: 30px;
+  margin-top: 5px;
 }
-
-.button-box {
-  width: 250px;
-  margin: 10px auto;
-  position: relative;
-  border-radius: 30px;
-  background: #fff;
-}
-
-.toggle-btn {
-  padding: 10px 35px;
-  cursor: pointer;
-  background: transparent;
-  border: 0;
-  outline: none;
-  position: relative;
-  text-align: center;
-}
-
-#btn {
-  left: 0;
-  top: 0;
-  position: absolute;
-  width: 125px;
-  height: 100%;
-  background: #2e9bff;
-  border-radius: 30px;
-  transition: 0.5s;
-} */
