--- a/wwwroot/css/edit.css
+++ b/wwwroot/css/edit.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
 }
 
-.createPost {
+.editPost {
     width: 95%;
     margin: 50px auto;
     padding: 20px;
@@ -149,10 +149,6 @@ body {
     padding: 20px;
     width: auto;
     height: auto;
-}
-
-.endDate{
-    width: 100%;
 }
 
 .inputtitle label,
